--- a/src/main/resources/static/main/table/css/style.css
+++ b/src/main/resources/static/main/table/css/style.css
@@ -17,7 +17,7 @@ body #container {
   background-color: #f1f1f1;
   display: flex;
 }
-body #container > div {
+body #container > * {
   width: 100%;
   height: 100vh;
 }
@@ -32,9 +32,10 @@ body #container .left {
   padding: 1rem;
   grid-template-columns: repeat(5, 1fr);
   gap: 1rem;
-  justify-content: center;
-  overflow: auto;
-  /* place-items: center; */
+  overflow: scroll;
+}
+body #container .left input[type=radio] {
+  display: none;
 }
 body #container .left .btn {
   aspect-ratio: 1/1;
@@ -46,6 +47,9 @@ body #container .left .btn {
   border-radius: 2px;
   cursor: pointer;
   transition: 300ms;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 body #container .left .btn.Busy {
   background-color: #ff0000;
@@ -54,6 +58,10 @@ body #container .left .btn.Unpaid {
   background-color: #c55a11;
 }
 body #container .left .btn:hover {
+  background-color: #fcead1;
+  color: black;
+}
+body #container .left .btn.selected {
   background-color: #fcead1;
   color: black;
 }
@@ -101,6 +109,7 @@ body #container .right .infor .btn {
   display: flex;
   transform: translateY(-50%);
   justify-content: flex-end;
+  gap: 1rem;
 }
 body #container .right .infor .btn button {
   padding: 0.7rem 1.5rem;
@@ -115,3 +124,6 @@ body #container .right .infor .btn button {
 body #container .right .infor .btn button:hover {
   background-color: #fcbd65;
 }/*# sourceMappingURL=style.css.map */
+.hide{
+  display: none;
+}
