--- a/src/main/resources/templates/main/table/index.html
+++ b/src/main/resources/templates/main/table/index.html
@@ -48,8 +48,7 @@
                 <br>
                 <br>
                 <div class="btn">
-                    <button class="paid hide" onclick="preventSubmit(event)"> Paid</button>
-                    <button class="clear hide" onclick="preventSubmit(event)">Free table</button>
+                    <button class="clear hide" >Free table</button>
                     <button class="next">Next</button>
                 </div>
             </div>
