--- a/src/main/resources/templates/main/receipt/index.html
+++ b/src/main/resources/templates/main/receipt/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="title">
             <h1>GIC Coffee</h1>
-            <p>Pherk coffé with Oun</p>
+            <p>Café IT</p>
         </div>
       
         <hr>
